# iocmanager

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  COMPILE  IocManager  IocManager.py  Makefile  MyDelegate.py  MyModel.py  README  README.md  applyConfig  applyConfig.py  auth_ui.py  commit_ui.py  default_env  details_ui.py  dev-requirements.txt  find_ioc  find_ioc.py  find_pv  fixTelnet  fixTelnet.py  getDirectory  getDirectory.py  hostname_ui.py  imgr  imgr.py  initIOC  initIOC.hutch  installConfig  installConfig.py  ioc_impl.py  ioc_ui.py  pyproject.toml  requirements.txt  runRepeater  startAll  startAll.py  startProc  (+1 more)
.github/: CODEOWNERS
ioc_manager/: MyDelegate.py  MyModel.py  find_ioc.py
iocmanager/: MyModel.py  __main__.py  cli.py  commit.py  commit.sh  config.py  dialog_add_ioc.py  dialog_apply_verify.py  dialog_commit.py  dialog_edit_details.py  dialog_find_pv.py  env_paths.py  epics_paths.py  gui.py  hioc_tools.py  imgr.py  ioc_impl.py  ioc_info.py  log_setup.py  logger.py  main_window.py  my_delegate.py  my_model.py  procserv_tools.py  server_tools.py  special_edits.py  table_delegate.py  table_model.py  terminal.py  type_hints.py  utils.py  version.py
iocmanager/scripts/: apply_config.py  find_ioc.py  fix_telnet.py  get_directory.py  install_config.py  (+3 more)
procserv/: build_procserv.sh
scripts/: IocManager  applyConfig  default_env  find_ioc  find_pv  fixTelnet  getDirectory  getDirectory.py  gui.sh  imgr  initIOC  initIOC.hutch  installConfig  runRepeater  startAll  startProc
ui/: apply_verify.ui  commit.ui  details.ui  find_pv.ui  ioc.ui
(+50 files in other folders)
