[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "setuptools_scm[toml]>=8.3",]

[project]
classifiers = [ "Programming Language :: Python :: 3",]
description = "IOC Process Manager via ProcServ"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "iocmanager"
requires-python = ">= 3.12"

[options]
zip_safe = false
include_package_data = true

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE.md"

[project.scripts]

[tool.setuptools_scm]
write_to = "iocmanager/_version.py"
tag_regex = '^R(\d+\.\d+\.\d+)$'

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "iocmanager*", ]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"
